Added useworkout routes and repo's
