# src/swagger/swagger-output.json
@@ -774,6 +774,34 @@
         }
       }
     },
+    "/userworkout/delete/{uuid}": {
+      "delete": {
+        "tags": [
+          "User Workout"
+        ],
+        "description": "Delete a user workout.",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User workout ID."
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User workout deleted."
+          },
+          "400": {
+            "description": "Invalid request body."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
     "/userworkout/all": {
       "get": {
         "tags": [
@@ -833,6 +861,67 @@
           },
           "404": {
             "description": "User workout not found."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/userworkout/{uuid}/all": {
+      "get": {
+        "tags": [
+          "User Workout"
+        ],
+        "description": "Retrieves a user workout by their ID with relations.",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User workout ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User workout found."
+          },
+          "404": {
+            "description": "User workout not found."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/userworkout/create": {
+      "post": {
+        "tags": [
+          "User Workout"
+        ],
+        "description": "Create a new user workout.",
+        "parameters": [
+          {
+            "name": "userId",
+            "description": "User ID.",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "workoutId",
+            "description": "Workout ID.",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User workout created."
+          },
+          "400": {
+            "description": "Invalid request body."
           },
           "500": {
             "description": "Internal server error."
